# ForgottenLegends

./: .gitignore  CMakeLists.txt  Makefile  README  README.md
area/: abyss2.are  air.are  ancicas.are  arachnos.are  area.lst  astral.are  bluet.are  canyon.are  catacomb.are  chapel.are  daycare.are  demise.are  disciple.are  draconia.are  dream.are  drow.are  dwarven.are  dylan.are  eastern.are  fallen.are  forleg.are  galaxy.are  gnome.are  grave.are  group.are  grove.are  haon.are  help.are  hitower.are  hood.are  icecave.are  immort.are  kamire.are  knights.are  limbo.are  mahntor.are  marsh.are  midennir.are  midgaard.are  mirror.are  (+28 more)
data/: mudcheck.pl
data/clans/: clan.lst  courage.cln  demise.cln  disciples.cln  fallen.cln  knights.cln  loner.cln  outcast.cln
data/misc/: .gitignore  ban.txt  bugs.txt  help.txt  info_text.txt  music.txt  shutdown.txt  upgrade.txt
data/stocks/: .gitignore
doc/: pfile.txt
player/: README
src/: .act_info.c.swp  ActionTarget.h  BanManager.cpp  BanManager.h  Character.cpp  Character.h  ClanManager.cpp  ClanManager.h  ClanReader.h  ConnectedState.h  ConnectedStateManager.cpp  ConnectedStateManager.h  Descriptor.h  EquipmentListGenerator.cpp  EquipmentListGenerator.h  ExtraDescription.cpp  ExtraDescription.h  FileLogger.cpp  FileLogger.h  Game.cpp  Game.h  IConnectedStateHandler.h  Makefile  NonPlayerCharacter.cpp  NonPlayerCharacter.h  Note.cpp  Note.h  Object.cpp  Object.h  ObjectHelper.cpp  ObjectHelper.h  PcRace.cpp  PcRace.h  PlayerCharacter.cpp  PlayerCharacter.h  PlayerRace.cpp  PlayerRace.h  Portal.cpp  Portal.h  Race.cpp  (+128 more)
src/clans/: Clan.cpp  Clan.h  ClanManager.cpp  ClanManager.h  ClanReader.cpp  ClanReader.h  ClanWriter.cpp  ClanWriter.h  IClanReader.h  IClanWriter.h
src/connected_state_handlers/: AbstractStateHandler.cpp  AbstractStateHandler.h  BreakConnectStateHandler.cpp  BreakConnectStateHandler.h  ConfirmNewNameStateHandler.cpp  ConfirmNewNameStateHandler.h  ConfirmNewPasswordStateHandler.cpp  ConfirmNewPasswordStateHandler.h  GetNameStateHandler.cpp  GetNameStateHandler.h  GetNewClassStateHandler.cpp  GetNewClassStateHandler.h  GetNewPasswordStateHandler.cpp  GetNewPasswordStateHandler.h  GetNewRaceStateHandler.cpp  GetNewRaceStateHandler.h  GetNewSexStateHandler.cpp  GetNewSexStateHandler.h  GetOldPasswordStateHandler.cpp  GetOldPasswordStateHandler.h  GetReclassStateHandler.cpp  GetReclassStateHandler.h  IConnectedStateHandler.h  ReadMotdStateHandler.cpp  ReadMotdStateHandler.h
src/enums/: ExitFlag.h  FlagConversions.h
src/helpers/: FlagHelper.cpp  FlagHelper.h  SocketHelper.cpp  SocketHelper.h
src/interfaces/: IAffectableEntity.h  ILogger.h  IObjectContainer.h  IRaceManager.h
test/: ClanManager.cpp  Makefile  NonPlayerCharacter.cpp  PlayerCharacter.cpp  StringHelper.cpp  handler.cpp  main.cpp
